# ecoscope-workflows

./: .dockerignore  .gitattributes  .gitignore  .lithops.yaml  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  development.md  generate_examples.sh  hatch_build.py  manage.toml  pixi.toml  pyproject.toml  requirements-core.toml  test_bins_day.html  test_bins_hour.html  test_bins_month.html  test_bins_week.html  test_bins_year.html
examples/events/ecoscope-workflows-events-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/events/ecoscope-workflows-events-workflow/ecoscope_workflows_events_workflow/: app.py  cli.py  dispatch.py  formdata.py  params-jsonschema.json  params.py
examples/events/ecoscope-workflows-events-workflow/tests/: conftest.py  test_app.py  test_cli.py
examples/events/ecoscope-workflows-patrol-events-workflow/: .dockerignore  README.md  pixi.toml  pyproject.toml
examples/events/ecoscope-workflows-patrol-events-workflow/ecoscope_workflows_patrol_events_workflow/: cli.py  dispatch.py  params-jsonschema.json  params.py
examples/mode-map/: pixi.toml  pyproject.toml  spec.yaml  test-cases.yaml
examples/mode-map/artifacts/: pyproject.toml
examples/mode-map/artifacts/workflow/: main.py
examples/mode-map/bld/: dag.script_async.py  pixi.toml
examples/mode-map/bld/test/: test_workflow.py
examples/mode-map/bld/workflows/: script-sequential.mock-io.py
examples/mode-map/ecoscope-workflows-map-example-workflow/: pyproject.toml
examples/mode-map/ecoscope-workflows-mode-map-workflow/: .dockerignore  Dockerfile  README.md  app.py  pixi.toml  pyproject.toml
examples/mode-map/ecoscope-workflows-mode-map-workflow/ecoscope_workflows_mode_map_workflow/: app.py  cli.py  dispatch.py  main.py  params-jsonschema.json  params.py
examples/mode-map/ecoscope-workflows-mode-map-workflow/service/: app.py
examples/mode-map/ecoscope-workflows-mode-map-workflow/tests/: conftest.py  test_app.py  test_cli.py  test_dags.py
examples/mode-map/test/: params.yaml
examples/mode-map/workflow/: README.md  params-jsonschema.json  params_fillable.json  pixi.toml
examples/mode-map/workflow/dags/: jupytext.py  script-async.mock-io.py  script-async.py  script-sequential.mock-io.py  script-sequential.py
examples/mode-map/workflow/test/: test_dags.py
examples/mode-map/workflow/tests/: test_dags.py
examples/mode-mapvalues/ecoscope-workflows-mode-mapvalues-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/mode-mapvalues/ecoscope-workflows-mode-mapvalues-workflow/ecoscope_workflows_mode_mapvalues_workflow/: app.py  cli.py  dispatch.py  main.py  params-jsonschema.json  params.py
examples/mode-mapvalues/ecoscope-workflows-mode-mapvalues-workflow/tests/: conftest.py  test_app.py  test_cli.py  test_dags.py
examples/patrol-events/ecoscope-workflows-patrol-events-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/patrol-events/ecoscope-workflows-patrol-events-workflow/ecoscope_workflows_patrol_events_workflow/: app.py  cli.py  dispatch.py  formdata.py  main.py  params-jsonschema.json  params.py
examples/patrol-events/ecoscope-workflows-patrol-events-workflow/tests/: conftest.py  test_app.py  test_cli.py  test_dags.py
examples/patrols/ecoscope-workflows-patrols-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/patrols/ecoscope-workflows-patrols-workflow/ecoscope_workflows_patrols_workflow/: app.py  cli.py  dispatch.py  formdata.py  params-jsonschema.json  params.py
examples/patrols/ecoscope-workflows-patrols-workflow/tests/: conftest.py  test_app.py  test_cli.py  test_dags.py
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/ecoscope_workflows_subject_tracking_workflow/: app.py  cli.py  dispatch.py  formdata.py  params-jsonschema.json  params.py
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/tests/: conftest.py  test_app.py  test_cli.py  test_dags.py
src/ecoscope-workflows-core/: pyproject.toml
src/ecoscope-workflows-core/ecoscope_workflows_core/: __main__.py  _models.py  annotations.py  artifacts.py  compiler.py  connections.py  decorators.py  formatting.py  graph.py  indexes.py  jsonschema.py  registry.py  requirements.py  serde.py  testing.py  util.py  visualize.py
src/ecoscope-workflows-core/ecoscope_workflows_core/tasks/: __init__.py
src/ecoscope-workflows-core/ecoscope_workflows_core/templates/: Dockerfile.jinja2  README.jinja2  app.jinja2  dockerignore.jinja2  jupytext.jinja2  run-async.jinja2  run-sequential.jinja2  script-async.jinja2  script-sequential.jinja2
src/ecoscope-workflows-core/tests/: test_annotations.py  test_artifacts.py  test_decorators.py  test_executors.py  test_graph.py  test_requirements.py  test_serde.py  test_type_adapter.py
src/ecoscope-workflows-core/tests/tasks/: test_aggregate.py  test_column_mapping.py  test_dashboard.py  test_exploding.py  test_groupby.py  test_indexing.py  test_io_persist.py  test_sorting.py  test_unit.py  test_value_mapping.py  test_widgets.py
src/ecoscope-workflows-ext-ecoscope/: README.md  pyproject.toml
src/ecoscope-workflows-ext-ecoscope/ecoscope_workflows_ext_ecoscope/: connections.py
src/ecoscope-workflows-ext-ecoscope/tests/: test_compiler.py  test_config.py  test_connections.py  test_registry.py  test_testing_utils.py
src/ecoscope-workflows-ext-ecoscope/tests/tasks/: test_calculate_feature_density.py  test_calculate_time_density.py  test_classification.py  test_create_meshgrid.py  test_ecomap.py  test_ecoplot.py  test_filtering.py  test_io_earthranger.py  test_preprocessing.py
src/ecoscope-workflows/compiler/: pyproject.toml
src/ecoscope-workflows/core/: pyproject.toml
src/ecoscope-workflows/core/tests/: test_annotations.py  test_decorators.py  test_executors.py  test_graph.py  (+2 more)
src/ecoscope-workflows/extension/: pyproject.toml
(+777 files in other folders)
