[project]
name = "mode-map"

[tool.pixi.project]
channels = ["https://prefix.dev/ecoscope-workflows", "conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.12.*"
ecoscope = { version = "v1.8.3", channel = "https://prefix.dev/ecoscope-workflows" }
ecoscope-workflows = { version = ".", channel = "https://prefix.dev/ecoscope-workflows" }
cloudpathlib-gs = "*"
lithops = { version = ">=3.4.1", channel = "https://prefix.dev/ecoscope-workflows" }

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]


[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
