[project]
name = "ecoscope-workflows-core"
dynamic = ["version"]
requires-python = ">=3.10"
description = "An extensible task specification and compiler for local and distributed workflows."
# readme = "README.md"
authors = [
  { name = "Charles Stern", email = "charless@earthranger.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
license = { text = "BSD-3-Clause"}
scripts = { ecoscope-workflows = "ecoscope_workflows_core.__main__:main" }
[project.entry-points."ecoscope_workflows"]
tasks = "ecoscope_workflows_core.tasks"  # for user extensions, this could be "my_custom_tasks.tasks"
[project.urls]
Homepage = "https://github.com/wildlife-dynamics/ecoscope-workflows"
Tracker = "https://github.com/wildlife-dynamics/ecoscope-workflows/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["ecoscope_workflows_core"]
[tool.hatch.build.targets.sdist]
include = ["ecoscope_workflows_core"]
[tool.hatch.build.hooks.vcs]
version-file = "ecoscope_workflows_core/_version.py"
[tool.hatch.version]
source = "vcs"
fallback-version = "9999"
[tool.hatch.version.raw-options]
root = "../../.."

[tool.pixi.project]
channels = [
    "https://prefix.dev/ecoscope-workflows",  # our custom channel, recipes in ./vendor directory
    "conda-forge",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]
[tool.pixi.pypi-dependencies]
"ecoscope-workflows-core" = { path = ".", editable = true }
[tool.pixi.dependencies]
jinja2 = "*"
pandera = "*"
pydantic = "<2.9.0"
pydantic-settings = "*"
py-rattler = ">=0.7.0,<0.8"
"ruamel.yaml" = "*"
ruff = "*"
tomli-w = "*"
# todo: split into optional package variants? (e.g. "ecoscope-workflows-core[gs,lithops,viz]")
# this is just a lot simpler for now, and in most cases we will want these dependencies
datamodel-code-generator = "*"
cloudpathlib-gs = "*"
lithops = { version = "==3.5.1cisaacstern", channel = "https://prefix.dev/ecoscope-workflows" }
pydot = "*"

[tool.pixi.feature.docs.dependencies]
pdoc3 = "*"

[tool.mypy]
plugins = ["pandera.mypy", "pydantic.mypy"]
[tool.pixi.feature.mypy]
dependencies = { mypy = "*", pandas-stubs = "*", pandera-mypy = "*" }
tasks = { mypy = "mypy --package ecoscope_workflows_core --package tests" }

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.environments]
default = { solve-group = "default" }

docs = { features = ["docs"], solve-group = "default" }

mypy-py310 = { features = ["test", "py310", "mypy"], solve-group = "py310" }
mypy-py311 = { features = ["test", "py311", "mypy"], solve-group = "py311" }
mypy-py312 = { features = ["test", "py312", "mypy"], solve-group = "py312" }

test-py310 = { features = ["test", "py310"], solve-group = "py310" }
test-py311 = { features = ["test", "py311"], solve-group = "py311" }
test-py312 = { features = ["test", "py312"], solve-group = "py312" }
