[project]
name = "ecoscope-workflows-map-example-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-map-example-workflow = "ecoscope_workflows_map_example_workflow.main:main" }
