# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "1f5d74c437542ff7b0cb9d58b9d2ceac5825c66bdc6e0efad0d3534eb72e3cf0"

[project]
name = "ecoscope-workflows-mode-map-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-mode-map-workflow = "ecoscope_workflows_mode_map_workflow.cli:main" }
