# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "224406132661acaaeeb8cedc6cb05519ede1e8fa60732c93ad1407f30539d898"

[project]
name = "ecoscope-workflows-mode-mapvalues-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-mode-mapvalues-workflow = "ecoscope_workflows_mode_mapvalues_workflow.cli:main" }
