# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "2a6d7c0b56f026fd964a75de3d6de8bc8e5934cbeaccc791bedcf87db90ddda3"

[project]
name = "ecoscope-workflows-mode-mapvalues-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-mode-mapvalues-workflow = "ecoscope_workflows_mode_mapvalues_workflow.cli:main" }
