[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "ecoscope-workflows.compiler"
dynamic = ["version"]
requires-python = ">=3.10"
description = "An extensible task specification and compiler for local and distributed workflows."
readme = "README.md"
authors = [
  { name = "Charles Stern", email = "charless@earthranger.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/wildlife-dynamics/ecoscope-workflows"
Tracker = "https://github.com/wildlife-dynamics/ecoscope-workflows/issues"

[tool.setuptools_scm]
root = "../../.."
write_to = "src/ecoscope-workflows/core/ecoscope_workflows/core/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = true

[tool.pixi.project]
channels = [
    "https://prefix.dev/ecoscope-workflows",
    "conda-forge",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
"ecoscope_workflows.compiler" = { path = ".", editable = true }
"ecoscope-workflows.core" = { path = "../core", editable = true }

[tool.pixi.dependencies]
# TODO: validate equality with core dependencies
# note: need to re-state these here to bring them in from conda
pandera = "*"
pydantic = "<2.9.0"
pydantic-settings = "*"
tomli-w = "*"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
