[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecoscope-workflows"
version = "9999"
requires-python = ">=3.10"
license = "BSD-3-Clause"
scripts = { ecoscope-workflows = "ecoscope_workflows.__main__:main" }
entry-points = { tasks = "ecoscope_workflows.tasks" }
